--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <i class="bi bi-whatsapp"></i>
         </a>
 
-        <a href="https://discord.gg/muhampedia" class="discord" target="_blank">
+        <a href="https://discord.gg/MNI" class="discord" target="_blank">
           <i class="bi bi-discord"></i>
         </a>
       </div>
@@ -93,7 +93,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Rekayasa Perangkat Lunak</h3>
           <p class="fst-italic">
-           Saya adalah seorang siswa yang sangat tertarik dengan teknologi, Alasan saya memilih jurusan RPL karena saya ingin menjadi seorang programer yang mempelajari semua hal tentang komputer dan bahasa pemrograman.
+           Saya adalah seorang siswa yang sangat tertarik dengan teknologi, Alasan saya memilih jurusan RPL karena saya ingin menjadi seorang programer yang mempelajari semua hal tentang komputer dan bahasa pemrograman. Menyukai bidang olahraga khususnya di athletic.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -113,9 +113,6 @@
               </ul>
             </div>
           </div>
-          <p>
-            Selain mempelajari ilmu teknologi, saya juga suka mempelajari ilmu psikologi yaitu ilmu yang mempelajari perilaku, fungsi mental, dan proses mental manusia.  
-          </p>
         </div>
       </div>
 
@@ -129,7 +126,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="-" data-purecounter-duration="1" class="purecounter"></span>
             <p>Happy Clients</p>
           </div>
         </div>
@@ -137,7 +134,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
             <p>Projects</p>
           </div>
         </div>
@@ -145,7 +142,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
             <p>Hours Of Support</p>
           </div>
         </div>
@@ -153,7 +150,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="-" data-purecounter-duration="1" class="purecounter"></span>
             <p>Awards</p>
           </div>
         </div>
@@ -405,15 +402,14 @@
         <p>Check My Resume</p>
       </div>
           <div class="resume-item">
-            <h4>Software Ingineering</h4>
+            <h4>Software Ingineering (RPL)</h4>
             <h5>2020 - 2023</h5>
-            <p><em>Web Developer, Lumajang, East Java</em></p>
+            <p><em>Web Developer</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Develop various programs (Various WEB, including: Student Data CRUD, Student Registration CRUD, Portfolio, Mini Game, dst).</li>
+              <li>Manage up to 5 projects or tasks at any given time while relaxing</li>
+              <li>Recommended and consulted with clients about web problems that I created.</li>
             </ul>
             </p>
             <p><em>Game Developer</em></p>
@@ -670,17 +666,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="Whatsapp"><i class="bi bi-whatsapp"></i></a>
-              <a href="#" class="discord"><i class="bi bi-discord"></i></a>
-              <a href="#" class="line"><i class="bi bi-line"></i></a>
-              <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-              <a href="#" class="tiktok"><i class="bi bi-tiktok"></i></a>
-              <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
-              <a href="#" class="spotify"><i class="bi bi-spotify"></i></a>
-              <a href="#" class=""><i class="bi bi-"></i></a>
+              <a href="https://twitter.com/MNIrvan11" class="twitter" target="_blank"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/mni.sl.5" class="facebook" target="_blank"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/irvankun_" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=6282144851960&text=Halo Irvan, saya ingin berbicara dengan anda." class="Whatsapp" target="_blank"><i class="bi bi-whatsapp"></i></a>
+              <a href="https://discord.gg/MNI" class="discord" target="_blank"><i class="bi bi-discord"></i></a>
             </div>
           </div>
         </div>
